--- a/public_html/home.html
+++ b/public_html/home.html
@@ -14,15 +14,28 @@
 </head>
 
 <body>
-	<div class="col-md-4">
-		hey
+	<div class="row">
+		<div class="col-xs-12 text-center visible-lg visible-md">
+			<img class="pull-right" src="images/login.png" alt="LinkedIn logo">
+			<img class="pull-right" src="images/iconLinkedin.png" alt="LinkedIn logo">
+			<img class="pull-right" src="images/iconTwitter.png" alt="LinkedIn logo">
+			<img class="pull-right" src="images/iconFacebook.png" alt="LinkedIn logo">
+			<img class="pull-right" src="images/iconInsta.png" alt="LinkedIn logo">
+			<img class="pull-right" src="images/iconInsta.png" alt="LinkedIn logo">
+		</div>
 	</div>
-		<div class="col-md-4">
-		hey
+	<div class="row">
+		<div class="col-md-4 text-center">
+			hey
+		</div>
+			<div class="col-md-4 text-center">
+			hey
+		</div>
+			<div class="col-md-4 text-center">
+			hey
+		</div>
 	</div>
-		<div class="col-md-4">
-		hey
-	</div>
+
 </body>
 
 </html>
