changed some profile.php stuff

--- a/public_html/home.html
+++ b/public_html/home.html
@@ -14,14 +14,15 @@
 </head>
 
 <body>
-	<div class="col-md-4">
-		hey
-	</div>
-		<div class="col-md-4">
-		hey
-	</div>
-		<div class="col-md-4">
-		hey
+	<div class="row">
+		<div class="col-xs-12">
+
+				<div class="pull-right">hey</div>
+				<div class="pull-right">hey</div>
+				<div class="pull-right">hey</div>
+
+		</div>
+
 	</div>
 </body>
 
