hoem page almostfinished

--- a/public_html/home.html
+++ b/public_html/home.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 
 <head>
 
@@ -10,32 +10,80 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-
+<link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
 	<div class="row">
-		<div class="col-xs-12 text-center visible-lg visible-md">
-			<img class="pull-right" src="images/login.png" alt="LinkedIn logo">
-			<img class="pull-right" src="images/iconLinkedin.png" alt="LinkedIn logo">
-			<img class="pull-right" src="images/iconTwitter.png" alt="LinkedIn logo">
-			<img class="pull-right" src="images/iconFacebook.png" alt="LinkedIn logo">
-			<img class="pull-right" src="images/iconInsta.png" alt="LinkedIn logo">
-			<img class="pull-right" src="images/iconInsta.png" alt="LinkedIn logo">
+		<div class="col-xs-12 headerBackground">
+			<div class="row">
+				<div class="col-xs-12 visible-xs">
+					<div class="row">
+						<div class="col-xs-2">
+							<span class="glyphicon glyphicon-search searchIcon"></span>
+						</div>
+						<div class="col-xs-10 col-xs-pull-1 searchBar">
+						<input type="text" class="search" >
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 text-center visible-lg visible-md visible-sm icon">
+					<img class="pull-right" src="images/login.png" alt="LinkedIn logo">
+					<img class="pull-right" src="images/iconLinkedin.png" alt="LinkedIn logo">
+					<img class="pull-right" src="images/iconTwitter.png" alt="LinkedIn logo">
+					<img class="pull-right" src="images/iconFacebook.png" alt="LinkedIn logo">
+					<img class="pull-right" src="images/iconInsta.png" alt="LinkedIn logo">
+					<img class="pull-right" src="images/iconInsta.png" alt="LinkedIn logo">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 text-center">
+					<div class="col-centered">	<!-- Nav -->
+						<div class="col-xs-5 col-xs-offset-3 text-center title">
+							<h1>Next Chapter</h1>
+							<h2>Turn the Page on Your Career</h2>
+						</div>
+						<div class="col-xs-1 col-xs-pull-1">
+							<img src="images/logo.png" alt="logo">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-3 col-xs-offset-9 visible-sm visible-md visible-lg">
+					<div class="row">
+						<div class="col-xs-3">
+							<span class="glyphicon glyphicon-search searchIcon"></span>
+						</div>
+						<div class="col-xs-9 col-xs-pull-1 searchBar">
+						<input type="text" class="search" >
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
-	<div class="row">
-		<div class="col-md-4 text-center">
-			hey
+		<!-- Nav -->
+		<div class="row navi">
+			<a href="schools.php">
+				<div class="col-md-4 text-center mainNav">
+					<p>College</p>
+				</div>
+			</a>
+			<a href="majors.php">
+				<div class="col-md-4 text-center mainNav">
+					<p>Majors</p>
+				</div>
+			</a>
+			<a href="about.html">
+				<div class="col-md-4 text-center mainNav">
+					<p>About</p>
+				</div>
+			</a>
 		</div>
-			<div class="col-md-4 text-center">
-			hey
-		</div>
-			<div class="col-md-4 text-center">
-			hey
-		</div>
-	</div>
-
+	
 </body>
 
 </html>
