Said I finished search results

--- a/public_html/search.html
+++ b/public_html/search.html
@@ -67,24 +67,105 @@
 			</div>
 		</div>
 	</div>
-		<!-- Nav -->
-		<div class="row navi">
-			<a href="schools.php">
-				<div class="col-md-4 text-center mainNav">
-					<p>College</p>
-				</div>
-			</a>
-			<a href="majors.php">
-				<div class="col-md-4 text-center mainNav">
-					<p>Majors</p>
-				</div>
-			</a>
-			<a href="about.html">
-				<div class="col-md-4 text-center mainNav">
-					<p>About</p>
-				</div>
-			</a>
+	<!-- Nav -->
+	<div class="row navi">
+		<a href="schools.php">
+			<div class="col-md-4 text-center mainNav">
+				<h4>College</h4>
+			</div>
+		</a>
+		<a href="majors.php">
+			<div class="col-md-4 text-center mainNav">
+				<h4>Majors</h4>
+			</div>
+		</a>
+		<a href="about.html">
+			<div class="col-md-4 text-center mainNav">
+				<h4>About</h4>
+			</div>
+		</a>
+	</div>
+	
+	<div class="row">
+		<div class="col-xs-12">
+			<h3>Search Results for ---</h3>
 		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-xs-6">
+					pic
+				</div>
+				<div class="col-xs-6">
+					<div class="row">				<!-- Name -->
+						<div class="col-xs-12">
+							Name
+						</div>
+					</div>
+					<div class="row">				<!-- School -->
+						<div class="col-xs-12">
+							School
+						</div>
+					</div>
+					<div class="row">				<!-- Major -->
+						<div class="col-xs-12">
+							Major
+						</div>
+					</div>
+					<div class="row">				<!-- Degree -->
+						<div class="col-xs-12">
+							Degree
+						</div>
+					</div>
+				</div>
+			</div>	
+		</div>
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-xs-6">
+					pic
+				</div>
+				<div class="col-xs-6">
+					<div class="row">				<!-- Name -->
+						<div class="col-xs-12">
+							Name
+						</div>
+					</div>
+					<div class="row">				<!-- School -->
+						<div class="col-xs-12">
+							School
+						</div>
+					</div>
+					<div class="row">				<!-- Major -->
+						<div class="col-xs-12">
+							Major
+						</div>
+					</div>
+					<div class="row">				<!-- Degree -->
+						<div class="col-xs-12">
+							Degree
+						</div>
+					</div>
+				</div>
+			</div>	
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-xs-12 footer">
+			<img src="images/logo.png" class="footerLogo" alt="logo">
+				<img class="pull-right" src="images/iconLinkedin.png" alt="LinkedIn logo">
+				<img class="pull-right" src="images/iconTwitter.png" alt="LinkedIn logo">
+				<img class="pull-right" src="images/iconFacebook.png" alt="LinkedIn logo">
+				<img class="pull-right" src="images/iconInsta.png" alt="LinkedIn logo">
+				<img class="pull-right" src="images/iconInsta.png" alt="LinkedIn logo">
+		</div>
+	</div>
+
+	
+	
 	
 </body>
 
