--- a/public_html/search.html
+++ b/public_html/search.html
@@ -47,7 +47,7 @@
 							<h1>Next Chapter</h1>
 							<h2>Turn the Page on Your Career</h2>
 						</div>
-						<div class="col-xs-1 col-xs-pull-1">
+						<div class="col-xs-1 col-xs-pull-1 logo">
 							<img src="images/logo.png" alt="logo">
 						</div>
 					</div>
@@ -56,12 +56,7 @@
 			<div class="row">
 				<div class="col-xs-3 col-xs-offset-9 visible-sm visible-md visible-lg">
 					<div class="row">
-						<div class="col-xs-3">
-							<span class="glyphicon glyphicon-search searchIcon"></span>
-						</div>
-						<div class="col-xs-9 col-xs-pull-1 searchBar">
-						<input type="text" class="search" >
-						</div>
+						
 					</div>
 				</div>
 			</div>
@@ -70,20 +65,30 @@
 	<!-- Nav -->
 	<div class="row navi">
 		<a href="schools.php">
-			<div class="col-md-4 text-center mainNav">
+			<div class="col-md-3 text-center mainNav">
 				<h4>College</h4>
 			</div>
 		</a>
 		<a href="majors.php">
-			<div class="col-md-4 text-center mainNav">
+			<div class="col-md-3 text-center mainNav">
 				<h4>Majors</h4>
 			</div>
 		</a>
 		<a href="about.html">
-			<div class="col-md-4 text-center mainNav">
+			<div class="col-md-3 text-center mainNav">
 				<h4>About</h4>
 			</div>
 		</a>
+		<div class="col-md-3 text-center mainNav">
+			<div class="row navi">
+				<div class="col-md-3">
+					<span class="glyphicon glyphicon-search searchIcon"></span>
+				</div>
+				<div class="col-xs-9 col-xs-pull-1 searchBar">
+					<input type="text" class="search" >
+				</div>
+			</div>
+		</div>
 	</div>
 	
 	<div class="row">
@@ -95,7 +100,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<div class="row">
-				<div class="col-xs-6">
+				<div class="col-xs-6 img-circle">
 					pic
 				</div>
 				<div class="col-xs-6">
