--- a/public_html/about.html
+++ b/public_html/about.html
@@ -24,17 +24,17 @@
 			</a>
 			<a href="schools.php">
 				<div class="col-md-2 text-center mainNav">
-					<p>Colleges</p>
+					<h4>Colleges</h4>
 				</div>
 			</a>
 			<a href="majors.php">
 				<div class="col-md-3 text-center mainNav">
-					<p>Majors</p>
+					<h4>Majors</h4>
 				</div>
 			</a>
 			<a href="about.html">
 				<div class="col-md-3 text-center mainNav">
-					<p>About</p>
+					<h4>About</h4>
 				</div>
 			</a>
 				<div class="col-md-3 mainNav">
