--- a/public_html/login.html
+++ b/public_html/login.html
@@ -19,7 +19,7 @@
 		<div class="row navi">
 			<a href="index.php">
 				<div class="col-md-1 text-center mainNav visible-md visible-lg">
-					<img src="images/logo.png" width="39px" style="margin-top:-5px; padding-bottom:3px;">
+					<img src="images/logo.png" width="35px" >
 				</div>
 			</a>
 			<a href="schools.php">
@@ -69,7 +69,7 @@
 								<div class="row">
 									<div class="col-xs-12">
 										<form method='post' action='editProfile.php' onsubmit='return validateForm()' name='loginForm'>
-									    	<input type="text" name="email" maxlength="255" placeholder="Email Address" required><br>
+									    	<input type="text" name="email" maxlength="255" class="email" placeholder="Email Address" required><br>
 									        <input type="password" name="password" maxlength="40" placeholder="Password" required>
 											<input type="submit">
 										</form>
