--- a/public_html/about.html
+++ b/public_html/about.html
@@ -18,8 +18,8 @@
 
 	<div class="row navi">
 			<a href="index.php">
-				<div class="col-md-1 text-center mainNav visible-md visible-lg">
-					<img src="images/logo.png" width="39px" style="margin-top:-5px; padding-bottom:3px;">
+				<div class="col-md-1 text-center mainNav visible-md visible-lg add">
+					<img src="images/logo.png" width="35px" >
 				</div>
 			</a>
 			<a href="schools.php">
