--- a/public_html/about.html
+++ b/public_html/about.html
@@ -7,7 +7,7 @@
 
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
-
+		<link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="js/bootstrap.min.js" ></script>
 		<link rel="stylesheet" href="css/main.css">
