--- a/public_html/about.html
+++ b/public_html/about.html
@@ -49,6 +49,8 @@
 					</div>
 				</div>
 		</div>
+		
+		<!--
 		<div class="row">
 			<div class="col-xs-12">
 				<h3>About</h3>
@@ -58,8 +60,39 @@
 			<div class="col-xs-12">
 				<p>Next Chapter is a career engagement website focused on empowering individuals to turn the page to the next chapter in their life. Instead of applying to hundreds of jobs online, we allow the businesses to find you. What are you waiting for? Star the next chapter in your life now.</p>
 			</div>
-		</div>
+		</div>	-->
 		
+		<div class="row">
+			<div class="col-xs-12 headerBackgroundAbout">
+				<div class="row">
+					<div class="col-xs-12 icon text-right">
+						<img src="images/login.png" class="pull-right" style="margin:15px;">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12 text-center">
+						<div class="col-centered">	<!-- Nav -->
+							<div class="col-xs-5 col-xs-offset-3 text-center title" style="margin-left:30%;">
+								<h1 class="drop">Next Chapter</h1>
+								<h2 class="drop">Turn the Page on Your Career</h2>
+								<h2 class="drop">About</h2>
+								<div class="row">
+									<div class="col-xs-12 describe">
+										<p>Next Chapter is a career engagement website focused on empowering individuals to turn the page to the next chapter in their life. Instead of applying to hundreds of jobs online, we allow the businesses to find you. What are you waiting for? Star the next chapter in your life now.</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-xs-1 col-xs-pull-1">
+								<img src="images/logo.png" alt="logo" style="margin-left:24px;" class="visible-lg visible-md">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<br><br><br><br><br><br><br>
+		</div>
+	
+
 		<div class="row footer">
 			<div class="col-xs-12">
 				<img src="images/logo.png" class="footerLogo" alt="logo">
